--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+	<meta name="keywords" content="hrana za macke,hrana za mace,za mace,za macke,hrana za ptice,oprema za macke,oprema za mace,za kučiće,hrane za macke,hrana za kucice,kucice za,hrana za ljubimce,kvalitetna hrana,hrana za,za papagaje, za ptice	,ptice hrana	,psi hrana,kucne ljubimce,hrana za ptice novi sad,hrana za papagaja,hrana za štigliće,mačke hrana,za hranu/> 
+	<meta name"title" content="PetShop"/>
+	<meta name"copyright" content="Mario Farkaš Barati"/>
+	<meta name"description" content="Sajt za prodaju životinja, hrane, i usluga za njih. Imamo početnu stranicu gde možemo da vidimo sa kojim životinjama radimo. Posle toga imamo stranicu o nama gde govori sta radimo i kako radimo sa životinjama. I na kraju imamo formu za novosti i poručivanje."/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
