--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div>
                 <div class="pomeranje kocka_prva">
                     <div class="tekst_drugi">
-                        <h1 class="naslov">Ptice</h1>
+                        <h1 class="naslov">Kvalitetna hrana za ptice</h1>
                         <p>
-                            U ponudi imamo veliki izbor ptica i hrane za ptice
+                            U ponudi imamo veliki izbor ptica i kvalitetna hrana za ptice
                         </p>
                         <br><br>
                         <a href="#ptice" class="saznaj_vise">Saznaj više</a>
