--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
                     <ul>
                         <li><img src="images/png-transparent-pet-shop-dog-pouso-alegre-veterinary-medicine-cat-pet-shops-text-service-pet-removebg-preview.png" alt=""></li>
-                        <li><a href="#" class="link-1 linkovi">početna</a></li>
+                        <li><a href="#" alt="pocetna" class="link-1 linkovi">Hrana</a></li>
                         <li><a href="onama.html" class="link-2 linkovi">o nama</a></li>
                         <li><a href="forma.html" class="link-3 linkovi">forma</a></li>
                     </ul>
@@ -54,6 +54,7 @@
                 <div class="pomeranje kocka_prva">
                     <div class="tekst_drugi">
                         <h1 class="naslov">Kvalitetna hrana za ptice</h1>
+			    <h2>za papagaje</h2>
                         <p>
                             U ponudi imamo veliki izbor ptica i kvalitetna hrana za ptice
                         </p>
@@ -66,7 +67,7 @@
                 </div>
             </div>
             <div class="treci">
-                <img src="images/macka1.jpg" alt="" class="slika-macke">
+                <img src="images/macka1.jpg" alt="Hrana za macke" class="slika-macke">
                 <div class="menjanje">
                     Nudimo Vam razne kućne ljubimce, hranu za njih i kompletan prateći asortiman
                 </div>
