--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 					<p>Subota: 11:00 - 15:00</p>
 					<p>Nedelja: ne radimo</p>
 				</div>
+				<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="o76woz5o"></script>
 			</div>
 		</footer>
     </div>
