--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 				<div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="o76woz5o"></script>
 			</div>
+			<div class="fb-share-button" data-href="https://mariofarkasbarati.github.io/petshop/index.html" data-layout="" data-size=""><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmariofarkasbarati.github.io%2Fpetshop%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
 		</footer>
     </div>
 </body>
