--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap" rel="stylesheet">
     <link rel = "icon" href = "images/png-transparent-pet-shop-dog-pouso-alegre-veterinary-medicine-cat-pet-shops-text-service-pet-removebg-preview.png" type = "image/x-icon">
 	<div class="fb-share-button" data-href="https://mariofarkasbarati.github.io/petshop/index.html" data-layout="" data-size=""><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmariofarkasbarati.github.io%2Fpetshop%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+	<div class="fb-like" data-href="https://mariofarkasbarati.github.io/petshop/index.html" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
 		
     <title>Pocetna</title>
 </head>
@@ -153,6 +154,8 @@
 				</div>
 				<div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="o76woz5o"></script>
+				<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="34iwX4PJ"></script>
 			</div>
 			
     </div>
