--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+	<meta property="og:title" content=Hrana za kućne ljubimce>
+<meta property="og:site_name" content=PetShop>
+<meta property="og:url" content=https://mariofarkasbarati.github.io/petshop/index.html>
+<meta property="og:description" content=Sva hrana za pse, mačke i ostale životinje.>
+<meta property="og:type" content=website>
+<meta property="og:image" content=images/png-transparent-pet-shop-dog-pouso-alegre-veterinary-medicine-cat-pet-shops-text-service-pet-removebg-preview.png>
 	<meta name="keywords" content="hrana za macke,hrana za mace,za mace,za macke,hrana za ptice,oprema za macke,oprema za mace,za kučiće,hrane za macke,hrana za kucice,kucice za,hrana za ljubimce,kvalitetna hrana,hrana za,za papagaje, za ptice	,ptice hrana	,psi hrana,kucne ljubimce,hrana za ptice novi sad,hrana za papagaja,hrana za štigliće,mačke hrana,za hranu/> 
 	<meta name"title" content="PetShop"/>
 	<meta name"copyright" content="Mario Farkaš Barati"/>
