--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap" rel="stylesheet">
     <link rel = "icon" href = "images/png-transparent-pet-shop-dog-pouso-alegre-veterinary-medicine-cat-pet-shops-text-service-pet-removebg-preview.png" type = "image/x-icon">
-	<div class="fb-share-button" data-href="https://mariofarkasbarati.github.io/petshop/index.html" data-layout="" data-size=""><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmariofarkasbarati.github.io%2Fpetshop%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
-	<div class="fb-like" data-href="https://mariofarkasbarati.github.io/petshop/index.html" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
-		
+	
     <title>Pocetna</title>
 </head>
 
@@ -32,7 +30,7 @@
                 <nav>
                     <ul>
                         <li><img src="images/png-transparent-pet-shop-dog-pouso-alegre-veterinary-medicine-cat-pet-shops-text-service-pet-removebg-preview.png" alt=""></li>
-                        <li><a href="#" alt="pocetna" class="link-1 linkovi">Hrana</a></li>
+                        <li><a href="#" alt="pocetna" class="link-1 linkovi">Pocetna</a></li>
                         <li><a href="onama.html" class="link-2 linkovi">o nama</a></li>
                         <li><a href="forma.html" class="link-3 linkovi">forma</a></li>
                     </ul>
