--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <nav>
                     <ul>
                         <li><img src="images/png-transparent-pet-shop-dog-pouso-alegre-veterinary-medicine-cat-pet-shops-text-service-pet-removebg-preview.png" alt=""></li>
-                        <li><a href="#" alt="pocetna" class="link-1 linkovi">Pocetna</a></li>
+                        <li><a href="#" alt="pocetna" class="link-1 linkovi">Početna</a></li>
                         <li><a href="onama.html" class="link-2 linkovi">o nama</a></li>
                         <li><a href="forma.html" class="link-3 linkovi">forma</a></li>
                     </ul>
