--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
             <div>
                 <div class="pomeranje kocka_prva">
                     <div class="tekst_drugi">
-                        <h1 class="naslov">Kvalitetna hrana za ptice</h1>
 			    <h2>za papagaje</h2>
                         <p>
-                            U ponudi imamo veliki izbor ptica i kvalitetna hrana za ptice
+                            U ponudi imamo veliki izbor ptica
                         </p>
                         <br><br>
                         <a href="#ptice" class="saznaj_vise">Saznaj više</a>
